# text-adventure-game

./: Cargo.toml  README.md  bacon.toml  example.ini  release.toml  world.ini
.github/workflows/: build.yml
rust-version/: Cargo.toml  README.md  world.ini
rust-version/src/: app.rs  error.rs  main.rs  player.rs  ui.rs
rust-version/src/config_parser/: action.rs  character.rs  dialogue.rs  item.rs  iter.rs  mod.rs  requirement.rs  response.rs  room.rs  section_iter.rs  staging.rs  test_utils.rs  title.rs  types.rs  world.rs
rust-version/src/entity/: action.rs  character.rs  invariant.rs  mod.rs  requirement.rs  room.rs
rust-version/src/world/: mod.rs
rust-version/src/world/entity/: action.rs  character.rs  invariant.rs  mod.rs  room.rs  title.rs
src/: error.rs  main.rs  player.rs  ui.rs
src/config_parser/: action.rs  character.rs  dialogue.rs  item.rs  iter.rs  mod.rs  preprocessor.rs  requirement.rs  response.rs  room.rs  test_utils.rs  title.rs  types.rs
src/core/: mod.rs  state.rs  world.rs
src/core/entity/: action.rs  character.rs  database.rs  invariant.rs  mod.rs  proxy.rs  room.rs  title.rs
src/core/entity/invariant/: color.rs  entity_name.rs  mod.rs
src/world/: game.rs  mod.rs  world.rs
src/world/entity/: character.rs  invariant.rs  mod.rs
