[package]
name = "text-adventure-game"
version = "0.6.4"
edition = "2024"

[dependencies]
bon = "3.6.3"
clap = { version = "4.5.39", features = ["derive"] }
convert_case = "0.8.0"
derive-getters = "0.5.0"
derive-new = "0.7.0"
rust-ini = "0.21"
regex = "1.11.1"
thiserror = "2.0.12"
strum = { version = "0.27.1", features = ["derive"] }
derive_more = { version = "2.0.1", features = ["full"] }
cursive = "0.21.1"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }
csscolorparser = "0.7.2"

[dev-dependencies]
asserting = "0.8.0"
pretty_assertions = "1.4.1"
