[package]
name = "text-adventure-game"
version = "0.7.1"
edition = "2024"
rust-version = "1.88"

[dependencies]
bon = "3.6.5"
clap = { version = "4.5.42", features = ["derive"] }
convert_case = "0.8.0"
derive-getters = "0.5.0"
derive-new = "0.7.0"
rust-ini = "0.21"
regex = "1.11.1"
thiserror = "2.0.12"
strum = { version = "0.27.2", features = ["derive"] }
derive_more = { version = "2.0.1", features = ["full"] }
cursive = "0.21.1"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter", "fmt"] }
csscolorparser = "0.7.2"
indexmap = "2.10.0"

[dev-dependencies]
assert_matches = "1.5.0"
asserting = "0.9.0"
pretty_assertions = "1.4.1"
rstest = "0.26.1"
